# CaLab

./: .gitignore  .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml  feedback.yml  field-option-request.yml
.github/workflows/: ci.yml  deploy.yml  publish-python.yml
.planning/: ROADMAP.md  STATE.md
apps/_template/: package.json  vite.config.ts
apps/admin/: vite.config.ts
apps/cadecon/: PLAN.md  index.html  package.json
apps/carank/: index.html  package.json  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  NEW_APP.md  ROADMAP.md
python/: README.md  pyproject.toml
python/docs/guides/: cadecon.md
python/src/calab/: __init__.py  _cli.py  _compute.py  _filter.py  _fista.py  _io.py  _kernel.py  _simulate.py
python/src/calab/_bridge/: __init__.py  _apps.py  _headless.py  _models.py  _server.py
python/src/calab/_loaders/: __init__.py  _caiman.py  _minian.py
python/src/catune/: __init__.py
python/tests/: conftest.py  test_bridge.py  test_cli.py  test_cross_language.py  test_decon.py  test_equivalence.py  test_filter.py  test_fista.py  test_fit_mode.py  test_headless.py  test_input_validation.py  test_io.py  test_kernel.py  test_loaders.py  test_simulate.py  test_solve_trace.py
python/tests/fixtures/: README.md  fast_kinetics.json  high_lambda.json  standard_clean.json  standard_dc_offset.json  with_filter.json
scripts/: combine-dist.mjs  ensure-wasm.mjs
src/: App.tsx
supabase/: README.md
(+361 files in other folders)
