[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catune"
version = "0.1.0"
description = "CaTune companion: calcium imaging deconvolution and data preparation"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/catune"]

[tool.pytest.ini_options]
testpaths = ["tests"]
